--- a/produk.html
+++ b/produk.html
@@ -220,7 +220,7 @@
     </nav>
 
 <div class="container">
-    <h1>Paket Hosting — SAMP RYZEN</h1>
+    <h1>Paket Hosting — SAMP CHISATOBOBA</h1>
     <p>Pilih paket sesuai kebutuhan servermu. Semua paket dilengkapi proteksi DDoS & support plugin/voice.</p>
 
     <div class="pricing">
