--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
     <!-- Features -->
     <section class="features" aria-labelledby="features-title">
-      <h2 id="features-title">Kenapa Pilih SAMP RYZEN?</h2>
+      <h2 id="features-title">Kenapa Pilih SAMP CHISATOBOBA?</h2>
 
       <div class="feature-grid">
 
